--- a/backend/composer.json
+++ b/backend/composer.json
@@ -19,7 +19,8 @@
     }
     ,
     "require-dev": {
-        "roave/security-advisories": "dev-latest"
+        "roave/security-advisories": "dev-latest",
+        "symfony/maker-bundle": "^1.48"
     },
     "config": {
         "allow-plugins": {
