--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -1,5 +1,12 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+api_get_books:
+    path:       /api/books
+    controller: App\Book\Infrastructure\Controller\GetBooksController
+    methods:    GET|HEAD
+api_get_book_by_id:
+    path:       /api/books/{id}
+    controller: App\Book\Infrastructure\Controller\GetBookByIdController
+    methods:    GET|HEAD
+api_store_book:
+    path:       /api/books
+    controller: App\Book\Infrastructure\Controller\StoreBookController
+    methods:    POST
