Feature/crud operations (#2)
* (doc) add readme file for library api

* (doc) add error codes to readme file

* feature:add entity book

* feature:migrations

* feature:add book entity repository and controller

* feature:add make command && pagination parameter

* feature:add getBookById

* refactoring

* feature:add storing book

* feature:fix storing book and refactoring pagination

* refactoring data structure

* feature:add DeleteBookController

* feature:  add update book route and controller functionality

* fix UpdateBookController

* feature:add JsonSchemaValidator

Co-authored-by: fesiddi <53375680+fesiddi@users.noreply.github.com>
Co-authored-by: Simone Richini <simone.richini@it.clara.net>

--- a/backend/config/routes.yaml
+++ b/backend/config/routes.yaml
@@ -1,5 +1,20 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+api_get_books:
+  path: /api/books
+  controller: App\Book\Infrastructure\Controller\GetBooksController
+  methods: GET|HEAD
+api_store_book:
+  path: /api/books
+  controller: App\Book\Infrastructure\Controller\StoreBookController
+  methods: POST
+api_get_book_by_id:
+  path: /api/books/{id}
+  controller: App\Book\Infrastructure\Controller\GetBookByIdController
+  methods: GET|HEAD
+api_delete_book:
+  path: /api/books/{id}
+  controller: App\Book\Infrastructure\Controller\DeleteBookController
+  methods: DELETE
+api_update_book:
+  path: /api/books/{id}
+  controller: App\Book\Infrastructure\Controller\UpdateBookController
+  methods: PUT
