--- a/backend/Makefile
+++ b/backend/Makefile
@@ -56,3 +56,7 @@ run-composer-install:
 php-shell:
 	@echo "Running ${COLOR_INFO}docker exec -it ${PHP_CONTAINER} /bin/bash${COLOR_RESET}"
 	docker-compose exec -it ${PHP_CONTAINER} sh
+
+## Migrations
+migrate-diff:
+	docker exec ${PHP_CONTAINER} sh -c "php bin/console doctrine:migrations:migrate"
