--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sass": "sass ./src/assets/css/app.scss ./src/assets/css/app.css",
+    "sass-watch": "sass --watch ./src/assets/css/app.scss ./src/assets/css/app.css"
   },
   "dependencies": {
+    "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.4",
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
-    "typescript": "^4.6.4",
+    "sass": "^1.57.1",
+    "typescript": "^4.9.4",
     "vite": "^3.2.3"
   }
 }
