feature:add xdebug && minorfix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,9 @@ RUN apt-get update && apt-get install -y curl libzip-dev zip unzip wget libxslt-
 
 RUN docker-php-ext-install pdo pdo_mysql pdo_pgsql zip xsl
 
+RUN pecl install xdebug \
+    && docker-php-ext-enable xdebug
+
 RUN curl -sSk https://getcomposer.org/installer | php -- --disable-tls && \
 	mv composer.phar /usr/local/bin/composer
 
