--- a/backend/.env
+++ b/backend/.env
@@ -26,3 +26,7 @@ APP_SECRET=dee96f2fdd328cf45d541b8c62f3d778
 DATABASE_URL="mysql://app:app@library-manager-mysql/app?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
