--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,6 +11,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "justinrainbow/json-schema": "^5.2",
+        "nelmio/cors-bundle": "^2.2",
         "symfony/console": "6.2.*",
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
