--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -10,3 +10,8 @@
 ###< symfony/framework-bundle ###
 
 docker-compose.override.yml.dist
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
