--- a/backend/composer.json
+++ b/backend/composer.json
@@ -21,8 +21,12 @@
     }
     ,
     "require-dev": {
+        "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
-        "symfony/maker-bundle": "^1.48"
+        "symfony/browser-kit": "6.2.*",
+        "symfony/css-selector": "6.2.*",
+        "symfony/maker-bundle": "^1.48",
+        "symfony/phpunit-bridge": "^6.2"
     },
     "config": {
         "allow-plugins": {
