--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "sass": "sass ./src/assets/css/app.scss ./src/assets/css/app.css",
-    "sass-watch": "sass --watch ./src/assets/css/app.scss ./src/assets/css/app.css"
+    "preview": "vite preview"
   },
   "dependencies": {
     "formik": "^2.2.9",
