fix: classroom fix

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "guzzlehttp/guzzle": "^7.0",
         "justinrainbow/json-schema": "^5.2",
         "nelmio/cors-bundle": "^2.2",
         "symfony/console": "6.2.*",
