--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,12 +22,8 @@
     }
     ,
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
-        "symfony/browser-kit": "6.2.*",
-        "symfony/css-selector": "6.2.*",
-        "symfony/maker-bundle": "^1.48",
-        "symfony/phpunit-bridge": "^6.2"
+        "symfony/maker-bundle": "^1.48"
     },
     "config": {
         "allow-plugins": {
