--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -6,6 +6,11 @@
 parameters:
 
 services:
+
+  App\EventListener\ExceptionListener:
+    tags:
+      - { name: kernel.event_listener, event: kernel.exception,  method: onKernelException }
+
   # default configuration for services in *this* file
   _defaults:
     autowire: true      # Automatically injects dependencies in your services.
