--- a/backend/.env
+++ b/backend/.env
@@ -24,6 +24,7 @@ APP_SECRET=dee96f2fdd328cf45d541b8c62f3d778
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 DATABASE_URL="mysql://app:app@library-manager-mysql/app?serverVersion=8&charset=utf8mb4"
+DATABASE_TEST_URL="mysql://app_test:app_test@library-manager-mysql:3306/app_test?serverVersion=8&charset=utf8mb4"
 # DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
