--- a/backend/composer.json
+++ b/backend/composer.json
@@ -7,10 +7,9 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "doctrine/doctrine-bundle": "^2.7",
+        "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
-        "guzzlehttp/guzzle": "^7.0",
         "justinrainbow/json-schema": "^5.2",
         "nelmio/cors-bundle": "^2.2",
         "symfony/console": "6.2.*",
@@ -22,6 +21,7 @@
     }
 ,
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
