--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -34,3 +34,6 @@ services:
       MYSQL_USER: app
       MYSQL_PASSWORD: app
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_TEST_DATABASE: app_test
+      MYSQL_TEST_USER: app_test
+      MYSQL_TEST_PASSWORD: app_test
