--- a/backend/phpunit.xml.dist
+++ b/backend/phpunit.xml.dist
@@ -15,6 +15,11 @@
 
     <php>
         <env name="APP_ENV" value="test"/>
+        <env name="CORS_ALLOW_ORIGIN" value="^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$"/>
+        <env name="DATABASE_TEST_URL" value="mysql://app_test:app_test@library-manager-mysql:3306/app_test?serverVersion=8"/>
+        <server name="KERNEL_CLASS" value="App\Kernel.php"/>
+        <server name="DOCTRINE_CONNECTION" value="test"/>
+        <server name="DOCTRINE_ENTITY_MANAGER" value="test"/>
     </php>
 
     <testsuites>
@@ -22,6 +27,10 @@
             <directory>tests</directory>
         </testsuite>
     </testsuites>
+
+    <extensions>
+        <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension"/>
+    </extensions>
 
     <coverage cacheDirectory=".phpunit.cache/code-coverage"
               processUncoveredFiles="true">
