--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,6 +22,7 @@
     }
 ,
     "require-dev": {
+        "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "6.2.*",
