--- a/backend/phpunit.xml.dist
+++ b/backend/phpunit.xml.dist
@@ -23,6 +23,10 @@
         </testsuite>
     </testsuites>
 
+    <extensions>
+        <extension class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension"/>
+    </extensions>
+
     <coverage cacheDirectory=".phpunit.cache/code-coverage"
               processUncoveredFiles="true">
         <include>
