--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,6 +22,7 @@
     }
 ,
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.1",
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
