--- a/backend/phpunit.xml.dist
+++ b/backend/phpunit.xml.dist
@@ -14,7 +14,8 @@
          verbose="true">
 
     <php>
-        <env name="APP_ENV" value="test"/>
+        <env name="APP_ENV" value="test" force="true"/>
+        <server name="KERNEL_CLASS" value="App\Kernel" />
     </php>
 
     <testsuites>
