add test to cover invalid file path in csvFileHandler

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -48,9 +48,13 @@ build:
 	sleep 10
 	make run-composer-install
 
+test-all:
+	@echo "${COLOR_INFO} 🔧️ Run php bin/phpunit ${COLOR_RESET}"
+	docker exec ${PHP_CONTAINER} sh -c "php bin/phpunit --testdox"
+
 test:
 	@echo "${COLOR_INFO} 🔧️ Run php bin/phpunit ${COLOR_RESET}"
-	docker exec ${PHP_CONTAINER} sh -c "php bin/phpunit"
+	docker exec ${PHP_CONTAINER} sh -c "php bin/phpunit --testdox --filter ${filter}"
 
 
 ## Install dependency
