--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,8 +4,12 @@
 /.env.*.local
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
+/public/files/imported
+/public/files/*.csv
+.phpunit.cache
 /var/
 /vendor/
+/tests/fixtures/*.copy
 ###< symfony/framework-bundle ###
 
 docker-compose.override.yml.dist
@@ -24,6 +28,36 @@ docker-compose.override.yml
 /.php-cs-fixer.php
 /.php-cs-fixer.cache
 ###< friendsofphp/php-cs-fixer ###
+
+
+### OSX ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 
 ### OSX ###
