--- a/backend/composer.json
+++ b/backend/composer.json
@@ -17,13 +17,17 @@
         "symfony/dotenv": "6.2.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
+        "symfony/property-access": "6.2.*",
         "symfony/runtime": "6.2.*",
+        "symfony/serializer": "6.2.*",
+        "symfony/validator": "6.2.*",
         "symfony/yaml": "6.2.*"
     }
 ,
     "require-dev": {
         "dama/doctrine-test-bundle": "^7.1",
         "friendsofphp/php-cs-fixer": "^3.13",
+        "phpspec/prophecy-phpunit": "^2.0",
         "phpstan/phpstan": "^1.9",
         "phpunit/phpunit": "^9.5",
         "roave/security-advisories": "dev-latest",
