--- a/backend/composer.json
+++ b/backend/composer.json
@@ -20,6 +20,7 @@
         "symfony/property-access": "6.2.*",
         "symfony/runtime": "6.2.*",
         "symfony/serializer": "6.2.*",
+        "symfony/uid": "6.2.*",
         "symfony/validator": "6.2.*",
         "symfony/yaml": "6.2.*"
     }
