--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -7,7 +7,7 @@ parameters:
 
 services:
 
-  App\EventListener\ExceptionListener:
+  App\Common\EventListener\ExceptionListener:
     tags:
       - { name: kernel.event_listener, event: kernel.exception,  method: onKernelException }
 
