--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Set up Docker Compose
-        uses: docker/compose@^
+        uses: docker/compose@1.29.2
         with:
           compose-file: docker-compose.yml
       - name: Build and run containers
