--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches:
       - "main"
+      
+env:
+    PHP_CONTAINER: library-manager-php
+    
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,6 +22,7 @@ jobs:
           compose-file: docker-compose.yml
       - name: Build and run containers
         run: |
+          docker-compose build library-manager-nginx
           docker-compose build ${PHP_CONTAINER} --no-cache
           docker-compose up -d
           sleep 10
