--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,20 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-buildx-
 
+    - name: Build Docker ngnix
+      uses: docker/build-push-action@v2
+      with:
+        context: ./backend
+        dockerfile: ./backend/ngnix/Dockerfile
+        load: true
+        cache-from: type=local,src=/tmp/.buildx-cache
+        cache-to: type=local,dest=/tmp/.buildx-cache
+
     - name: Build Docker image
       uses: docker/build-push-action@v2
       with:
         context: ./backend
+        dockerfile: ./backend/php/Dockerfile
         load: true
         cache-from: type=local,src=/tmp/.buildx-cache
         cache-to: type=local,dest=/tmp/.buildx-cache
