--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Build Docker ngnix
       uses: docker/build-push-action@v2
       with:
-        context: ./backend
+        context: .
         dockerfile: ./backend/ngnix/Dockerfile
         load: true
         cache-from: type=local,src=/tmp/.buildx-cache
@@ -33,7 +33,7 @@ jobs:
     - name: Build Docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./backend
+        context: .
         dockerfile: ./backend/php/Dockerfile
         load: true
         cache-from: type=local,src=/tmp/.buildx-cache
