--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,25 +19,27 @@ jobs:
         path: /tmp/.buildx-cache
         key: ${{ runner.os }}-buildx-${{ github.sha }}
         restore-keys: |
-          ${{ runner.os }}-buildx-
-
-    - name: Build Docker ngnix
+          ${{ runner.os }}-buildx-         
+          
+    - name: Build NGINX Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
-        dockerfile: ./backend/ngnix/Dockerfile
+        context: ./backend/docker/nginx
+        dockerfile: ./backend/docker/nginx/Dockerfile
         load: true
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        cache-from: type=local,src=/tmp/.buildx-cache-nginx
+        cache-to: type=local,dest=/tmp/.buildx-cache-nginx
+        tags: your-nginx-image-name:latest
 
-    - name: Build Docker image
+    - name: Build PHP Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
-        dockerfile: ./backend/php/Dockerfile
+        context: ./backend/docker/php
+        dockerfile: ./backend/docker/php/Dockerfile
         load: true
-        cache-from: type=local,src=/tmp/.buildx-cache
-        cache-to: type=local,dest=/tmp/.buildx-cache
+        cache-from: type=local,src=/tmp/.buildx-cache-php
+        cache-to: type=local,dest=/tmp/.buildx-cache-php
+        tags: your-php-image-name:latest
 
     - name: Set up PHP container
       run: |
