--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         load: true
         cache-from: type=local,src=/tmp/.buildx-cache-nginx
         cache-to: type=local,dest=/tmp/.buildx-cache-nginx
-        tags: your-nginx-image-name:latest
+        tags: library-manager-nginx:latest
 
     - name: Build PHP Docker image
       uses: docker/build-push-action@v2
@@ -39,7 +39,7 @@ jobs:
         load: true
         cache-from: type=local,src=/tmp/.buildx-cache-php
         cache-to: type=local,dest=/tmp/.buildx-cache-php
-        tags: your-php-image-name:latest
+        tags: library-manager-php:latest
 
     - name: Set up PHP container
       run: |
