--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,11 +24,9 @@ jobs:
     - name: Build NGINX Docker image
       uses: docker/build-push-action@v2
       with:
-        context: ./backend/docker/nginx
-        dockerfile: ./backend/docker/nginx/Dockerfile
+        context: ./backend/docker/ngnix
+        dockerfile: ./backend/docker/ngnix/Dockerfile
         load: true
-        cache-from: type=local,src=/tmp/.buildx-cache-nginx
-        cache-to: type=local,dest=/tmp/.buildx-cache-nginx
         tags: library-manager-nginx:latest
 
     - name: Build PHP Docker image
@@ -37,8 +35,6 @@ jobs:
         context: ./backend/docker/php
         dockerfile: ./backend/docker/php/Dockerfile
         load: true
-        cache-from: type=local,src=/tmp/.buildx-cache-php
-        cache-to: type=local,dest=/tmp/.buildx-cache-php
         tags: library-manager-php:latest
 
     - name: Set up PHP container
