--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,20 +30,7 @@ jobs:
         tags: library-manager-nginx:latest
 
     - name: Build PHP Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: ./backend/docker/php
-        dockerfile: ./backend/docker/php/Dockerfile
-        load: true
-        tags: library-manager-php:latest
-
-    - name: Set up PHP container
-      run: |
-        docker-compose up -d
-
-    - name: Run composer install
-      run: |
-        docker exec library-manager-php sh -c "composer install -o"
+      run: cd backend && make build
 
     - name: Run PHP-CS-Fixer
       run: |
