--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,12 @@ jobs:
         load: true
         tags: library-manager-php:latest
 
-    - name: Run PHP-CS-Fixer
+    - name: Run Docker Container
+      working-directory: ./backend
+      run: |
+        make up
+
+    - name: Run PHP-CS-Check
       working-directory: ./backend
       run: |
         make php-cs-check
