--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,45 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Build the stack
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build NGINX Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend/docker/ngnix
+          dockerfile: ./backend/docker/ngnix/Dockerfile
+          load: true
+          tags: library-manager-nginx:latest
+
+      - name: Build PHP Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./backend/docker/php
+          dockerfile: ./backend/docker/php/Dockerfile
+          load: true
+          tags: library-manager-php:latest
+
+      - name: create env
         working-directory: ./backend
-        run: docker-compose up -d
+        run: cat>.env.local
+
+      - name: up
+        working-directory: ./backend
+        run: make up
+
+      - name: Run PHP-CS-Check
+        working-directory: ./backend
+        run: |
+          make php-cs-check
+      - name: Run PHPStan
+        working-directory: ./backend
+        run: |
+          make php-stan
+      - name: Run tests
+        working-directory: ./backend
+        run: |
+          make test-all
