--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,42 +10,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: create env
-        working-directory: ./backend
-        run: cat>.env.local
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Build NGINX Docker image
-        uses: docker/build-push-action@v2
+      - name: Setup PHP with tools
+        uses: shivammathur/setup-php@v2
         with:
-          context: ./backend/docker/ngnix
-          dockerfile: ./backend/docker/ngnix/Dockerfile
-          load: true
-          tags: library-manager-nginx:latest
-
-      - name: Build PHP Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./backend/docker/php
-          dockerfile: ./backend/docker/php/Dockerfile
-          load: true
-          tags: library-manager-php:latest
+          php-version: '8.2'
+          tools: php-cs-fixer, phpunit
 
       - name: up
         working-directory: ./backend
-        run: make up
+        run: composer install
 
-      - name: Run PHP-CS-Check
-        working-directory: ./backend
-        run: |
-          make php-cs-check
-      - name: Run PHPStan
-        working-directory: ./backend
-        run: |
-          make php-stan
       - name: Run tests
         working-directory: ./backend
         run: |
-          make test-all
+          php bin/phpunit --testdox
